# python-funcional

./: README.md  mkdocs.yml  pyproject.toml
roteiros/: 00_introducao.md  01_funcoes.md  02_iteraveis_iteradores.md  03_consumindo_iteraveis.md  04_funcoes_reducao_mapeamento.md  05_hofs.md  06_funcoes_geradoras_e_hofs_p2.md  07_construindo_nossa_lib.md  08_closures_1_escopo.md  09_closures_2.md  10_decoradores.md  README.md
