[project]
name = "python-funcional"
version = "0.1.0"
description = ""
authors = [
    {name = "dunossauro",email = "mendesxeduardo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-material (>=9.6.18,<10.0.0)",
    "mkdocs-git-authors-plugin (>=0.10.0,<0.11.0)",
    "mkdocs-git-revision-date-localized-plugin (>=1.4.7,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
